<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fifteen"
    android:layout_marginTop="150dp"
    android:background="@drawable/round_page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/ten"
        android:hint="@string/submit_comment"
        android:textSize="@dimen/twenty_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/ten"
        android:text="@string/comment"
        android:textSize="@dimen/text_size_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addComment"
        tools:ignore="SpUsage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/save"
        android:textSize="@dimen/text_size_30"
        android:background="@color/blue_100"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/comment"
        android:layout_marginTop="@dimen/one_hundred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />



</androidx.constraintlayout.widget.ConstraintLayout>